= 0.7.0 (2014-04-22)

  * Added support for CocoaPods and CocoaDocs [Javier Cicchelli]
  * Fixed enumeration values found on the tests [Javier Cicchelli]
  * Fixed a build setting property that was failing the execution of the iOS tests [Javier Cicchelli]

= 0.6.3 (2014-04-21)

  * Written the documentation for the private interfaces [Javier Cicchelli]
  * Enabled the Documentation Comments settings on both "Marvelous" and "MarvelousOSX" targets [Javier Cicchelli]
  * Improved the run scripts on the build phase of the "MarvelousLibrary" and "MarvelousFramework" targets to include the generated documentation into the generated .zip files [Javier Cicchelli]

= 0.6.2 (2014-04-20)

  * Written the README.md [Javier Cicchelli]
  * Written the documentation for the public interfaces [Javier Cicchelli]
  * Renamed RCImageModeCodes and RCImageModes to RCImageAspectRatioCodes and RCImageAspectRatios respectively [Javier Cicchelli]
  * Renamed RCFormatTypeCodes and RCFormatTypes to RCIssueFormatCodes and RCIssueFormats respectively [Javier Cicchelli]
  * Renamed RCSeriesTypeCodes and RCSeriesTypes to RCFrequencyTypeCodes and RCFrequencyTypes respectively [Javier Cicchelli]
  * Moved the block definitions from the RCMarvelAPI to RCBlocks [Javier Cicchelli]
  * Improved the run scripts on the build phase of the "MarvelousLibrary" and "MarvelousFramework" targets to include the README.md into the generated .zip files [Javier Cicchelli]

= 0.6.1 (2014-04-11)

  * Added LICENSE file [Javier Cicchelli]
  * Added CHANGES file [Javier Cicchelli]
  * Added README file [Javier Cicchelli]
  * Assigned to this project the MIT license [Javier Cicchelli]
  * Improved the run scripts on the build phase of the "MarvelousLibrary" and "MarvelousFramework" targets to include the LICENSE and CHANGES into the generated .zip files [Javier Cicchelli]