@@ -26,6 +26,7 @@
 #import <XCTest/XCTest.h>
 
 #import "RCComicsObject.h"
+#import "RCResponseKeys.h"
 
 @interface RCComicsObjectTests : XCTestCase
 
