@@ -26,6 +26,7 @@
 #import <XCTest/XCTest.h>
 
 #import "RCListObject.h"
+#import "RCResponseKeys.h"
 
 @interface RCListObjectTests : XCTestCase
 
